--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div>
-        <li><a href="/NB.html">home</a></li>
+        <li><a href="/NB.html">ezine</a></li>
     </div>
     
 </body>
